<resources>

    <!--Word List App-->
    <string name="app_name">Word List</string>

    <!--Common-->
    <string name="word">Word</string>
    <string name="words">Words</string>
    <string name="word_list">Word List</string>
    <string name="word_lists">Word Lists</string>
    <string name="marketplace">Marketplace</string>
    <string name="word_list_name">Word List Name</string>
    <string name="word_name_default">aliquots</string>
    <string name="word_pronunciation_default">\u02c8a-l\u0259-\u02cckw\u00e4t, -kw\u0259t</string>
    <string name="word_info_value_default">
        type: noun\ndefinition: a portion of a larger whole, especially a sample taken for chemical
        analysis or other treatment.\nexample: an aliquot was examined daily for the appearance of
        cholesterol monohydrate crystals
    </string>
    <string name="word_definition_default">
        a portion of a larger whole, especially a sample taken for chemical analysis or other treatment
        a portion of a larger whole, especially a sample taken for chemical analysis or other treatment
    </string>
    <string name="word_list_name_default">Lorem Ipsum</string>
    <string name="text_default">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        varius commodo nulla, non convallis lectus. Donec molestie risus mi, nec dignissim eros
        malesuada vel. Nunc ac nisl eget ex feugiat tempor.
    </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
    <string name="settings">Settings</string>
    <string name="practice">Practice</string>

    <!--Shortcuts-->
    <string name="sdm_related_words">Related Words Disabled</string>
    <string name="sll_related_words">Related Words</string>
    <string name="ssl_related_words">Related Words</string>
    <string name="sdm_practice">Practice Disabled</string>
    <string name="sll_practice">Practice</string>
    <string name="ssl_practice">Practice</string>
    <string name="sdm_marketplace">Marketplace Disabled</string>
    <string name="sll_marketplace">Marketplace</string>
    <string name="ssl_marketplace">Marketplace</string>
    <string name="sdm_search">Search Disabled</string>
    <string name="sll_search">Search</string>
    <string name="ssl_search">Search</string>


    <!--Main Activity - Dashboard Actions -->
    <string name="search">Search</string>
    <string name="search_word">Search Word</string>

    <!--Main Activity - Dashboard Cards -->
    <string name="word_of_the_day">Word of The Day!</string>
    <string name="word_game_question_start">is most similar to</string>

    <!--Main Activity - Create Word List-->
    <string name="create_word_list_header_info">Organize Words with Word Lists!</string>
    <string name="features_of_word_list">Features of Word List</string>

    <!--Word Activity-->
    <string name="label_word_information">Information</string>
    <string name="label_word_mnemonics">Mnemonics</string>
    <string name="label_action_dictate_mode">Dictate Mode</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="tap_to_show">Tap to Show</string>
    <string name="label_edit">Edit</string>
    <string name="label_done">Done</string>
    <string name="information">Information</string>
    <string name="mnemonics">Mnemonics</string>
    <string name="etymology">Etymology</string>
    <string name="next_word">Next Word</string>
    <string name="previous_word">Previous Word</string>
    <string name="suggest_edits">Suggest Edits</string>

    <!--WordList Activity-->
    <string name="delete_word_list_title">Delete Word List?</string>
    <string name="delete_word_list_content">All words in word list will be removed</string>
    <string name="delete_word_list_success">Word List Deleted</string>

    <!--Marketplace Word List-->
    <string name="hint_search_word_lists">Search Marketplace</string>

    <!--Settings Activity-->
    <string name="pref_dictate_mode_type_key">dictate_mode_type</string>
    <string name="pref_dictate_mode_type_title">Dictate Mode</string>
    <string name="pref_dictate_mode_type_summary">Select dictate mode type for words</string>
    <string name="pref_dictate_mode_type_default">word_complete_info</string>
    <string name="pref_dictate_mode_speed_key">dictate_mode_speed</string>
    <string name="pref_dictate_mode_speed_title">Dictate Mode Speed</string>
    <string name="pref_dictate_mode_speed_summary">Select dictate mode speed for words</string>
    <string name="pref_dictate_mode_speed_default">normal</string>
    <string name="dictate_mode">Dictate Mode</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>

    <!--Related Word Activity-->
    <string-array name="related_words_types">
        <item>Similar</item>
        <item>Antonyms</item>
        <item>Describe</item>
        <item>Adjective</item>
        <item>Trigger</item>
        <item>Rhyming</item>
    </string-array>

    <string-array name="dictate_mode_type_entries">
        <item>Word with Complete Info</item>
        <item>Word with Definition</item>
        <item>Word only</item>
    </string-array>
    <string-array name="dictate_mode_type_entry_values">
        <item>word_complete_info</item>
        <item>word_definition</item>
        <item>word_only</item>
    </string-array>
    <string-array name="dictate_mode_speed_entries">
        <item>Slower</item>
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Faster</item>
    </string-array>
    <string-array name="dictate_mode_speed_entry_values">
        <item>slower</item>
        <item>slow</item>
        <item>normal</item>
        <item>fast</item>
        <item>faster</item>
    </string-array>

</resources>
