<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/dictate_mode">

        <ListPreference
            android:defaultValue="@string/pref_dictate_mode_type_default"
            android:entries="@array/dictate_mode_type_entries"
            android:entryValues="@array/dictate_mode_type_entry_values"
            android:key="@string/pref_dictate_mode_type_key"
            android:summary="@string/pref_dictate_mode_type_summary"
            android:title="@string/pref_dictate_mode_type_title" />

        <ListPreference
            android:defaultValue="@string/pref_dictate_mode_speed_default"
            android:entries="@array/dictate_mode_speed_entries"
            android:entryValues="@array/dictate_mode_speed_entry_values"
            android:key="@string/pref_dictate_mode_speed_key"
            android:summary="@string/pref_dictate_mode_speed_summary"
            android:title="@string/pref_dictate_mode_speed_title" />

    </PreferenceCategory>

</PreferenceScreen>