<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_add_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_action"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_add" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_related_words"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_action"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_related_words" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_action"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_notifications" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_practice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_action"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_practice" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/default_primary_text"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tv_wod_heading"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_of_the_day"
                android:textColor="@color/default_secondary_text" />

            <TextView
                android:id="@+id/tv_wod_word"
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wod_heading"
                android:layout_marginTop="4dp"
                android:text="@string/word_name_default"
                android:textColor="@color/default_opposite_text" />

            <TextView
                android:id="@+id/tv_wod_pronunciation"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wod_word"
                android:layout_marginTop="4dp"
                android:text="@string/word_pronunciation_default"
                android:textColor="@color/default_opposite_text" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/word_list"
        android:textColor="@color/default_secondary_text" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>