<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.search.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_primary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <EditText
            android:id="@+id/et_search_bar"
            style="@style/EditTextSearchView.Base"
            android:drawableStart="@drawable/ic_arrow_back_dark">

            <requestFocus />
        </EditText>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_from_search_bar"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_search_word_section_header"
                style="@style/SearchResultSectionHeader"
                android:background="@drawable/bg_search_section_header"
                android:text="@string/words" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_search_word_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_search_word_list_section_header"
                        style="@style/SearchResultSectionHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/word_lists"
                        android:textColor="@color/mal_text_primary" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_search_word_list_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_search_marketplace_section_header"
                        style="@style/SearchResultSectionHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/marketplace"
                        android:textColor="@color/mal_text_primary" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_search_marketplace_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>