<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/word_actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_save_word"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_save" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Save" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_word"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Add" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_related_words"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_related_words" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Related" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_word_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_image_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Image" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_word_info_mnemonics_cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/word_actions_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_word_etymology_title"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_word_pronunciation"
                android:elevation="9dp"
                android:paddingStart="12dp"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                android:text="@string/etymology" />

            <include
                android:id="@+id/layout_word_etymology_card"
                layout="@layout/layout_word_etymology_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_word_etymology_title"
                android:layout_marginTop="-16dp" />

            <TextView
                android:id="@+id/tv_word_info_title"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_word_etymology_card"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_word_pronunciation"
                android:elevation="9dp"
                android:paddingStart="12dp"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                android:text="@string/information" />

            <include
                android:id="@+id/layout_word_info_card"
                layout="@layout/layout_word_info_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_word_info_title"
                android:layout_marginTop="-16dp" />

            <include
                android:id="@+id/layout_word_info_card_2"
                layout="@layout/layout_word_info_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout_word_info_card"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tv_word_mnemonics_title"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_word_info_card_2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_word_pronunciation"
                android:elevation="9dp"
                android:paddingStart="12dp"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                android:text="@string/mnemonics" />

            <include
                android:id="@+id/layout_word_mnemonics_card"
                layout="@layout/layout_word_mnemonics_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_word_mnemonics_title"
                android:layout_marginTop="-16dp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>